--- a/src/app/features/model-diplome/list-model-diplome/list-model-diplome.component.html
+++ b/src/app/features/model-diplome/list-model-diplome/list-model-diplome.component.html
@@ -11,7 +11,7 @@
     <div class="card">
       <h2 class="mb-4 text-base font-semibold capitalize text-slate-800 dark:text-slate-100">Data Table</h2>
       <div class="flex justify-end mb-4">
-        <button (click)="openAddModal()" class="flex items-center gap-2 px-4 py-2 rounded bg-purple text-white font-semibold shadow hover:bg-purple/90 transition">
+        <button (click)="openAddAndUpdateModal()" class="flex items-center gap-2 px-4 py-2 rounded bg-purple text-white font-semibold shadow hover:bg-purple/90 transition">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
           </svg>
@@ -86,7 +86,7 @@
               <label class="block mb-1 font-medium">Institution</label>
               <select class="w-full border rounded px-3 py-2" [(ngModel)]="addModel.institutionId" name="institutionId" required>
                 <option [ngValue]="null" disabled selected>Choisir une institution</option>
-                <option *ngFor="let inst of institutions" [ngValue]="inst.id">{{ inst.name }}</option>
+                <option *ngFor="let inst of institutions" [ngValue]="inst.id">{{ inst.nom }}</option>
               </select>
             </div>
             <div class="mb-4">
