--- a/src/app/layouts/topbar/settings/settings.component.html
+++ b/src/app/layouts/topbar/settings/settings.component.html
@@ -67,8 +67,8 @@
                   <span>LTR</span>
                 </label>
                 <label class="inline-flex cursor-pointer">
-                  <input type="radio" name="direction" value="rtl" [(ngModel)]="direction" (click)="updateDirection('rtl')" class="form-radio text-purple" />
-                  <span>RTL</span>
+                  <!-- <input type="radio" name="direction" value="rtl" [(ngModel)]="direction" (click)="updateDirection('rtl')" class="form-radio text-purple" /> -->
+                  <!-- <span>RTL</span> -->
                 </label>
               </div>
             </div>
