--- a/src/app/layouts/layouts.component.html
+++ b/src/app/layouts/layouts.component.html
@@ -31,8 +31,8 @@
 </div>
 
 
-<button type="button" (click)="toggleDirection()"
+<!-- <button type="button"
   class="fixed z-50 px-4 text-white border-gray-200 shadow-lg h-11 ltr:right-0 rtl:left-0 bg-purple ltr:rounded-l-md rtl:rounded-r-md top-1/3">
   <span class="rtl:hidden">RTL</span>
   <span class="ltr:hidden">LTR</span>
-</button>
+</button> -->
