--- a/src/app/features/diplome/list-diplomes/list-diplomes.component.html
+++ b/src/app/features/diplome/list-diplomes/list-diplomes.component.html
@@ -42,6 +42,7 @@
               <th class="border border-gray-300 px-4 py-2">N° d'enregistrement</th>
               <th class="border border-gray-300 px-4 py-2">Modèle</th>
               <th class="border border-gray-300 px-4 py-2">Champs</th>
+              <th class="border border-gray-300 px-4 py-2">Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -59,6 +60,11 @@
                     <span class="font-semibold">{{ field.fieldName }}:</span> {{ field.fieldValue }}
                   </li>
                 </ul>
+              </td>
+              <td class="border border-gray-300 px-4 py-2 text-center">
+                <button (click)="downloadCertificate(diplome.id)" title="Générer le certificat" class="text-purple hover:text-pink-600 transition text-xl">
+                  <i class="ri-award-fill"></i>
+                </button>
               </td>
             </tr>
           </tbody>
